--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,11 @@
     <maven.compiler.source>1.8</maven.compiler.source>
    	<maven.compiler.target>1.8</maven.compiler.target>
   	<junit.version>3.8.1</junit.version>
+  	<javapoet.version>1.9.0</javapoet.version>
+  	<jcodemodel.version>3.0.1</jcodemodel.version>
+  	<javaparser.version>3.4.3</javaparser.version>
+  	<spring-core.version>5.0.2.RELEASE</spring-core.version>
+  	
   </properties>
 
   <dependencies>
@@ -24,5 +29,22 @@
       <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+	    <groupId>com.github.javaparser</groupId>
+	    <artifactId>javaparser-core</artifactId>
+	    <version>${javaparser.version}</version>
+	</dependency>
+    <dependency>
+	    <groupId>com.helger</groupId>
+	    <artifactId>jcodemodel</artifactId>
+	    <version>${jcodemodel.version}</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.springframework</groupId>
+	    <artifactId>spring-core</artifactId>
+	    <version>${spring-core.version}</version>
+	</dependency>
+	
+	
   </dependencies>
 </project>
