--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
   	<jcodemodel.version>3.0.1</jcodemodel.version>
   	<javaparser.version>3.4.3</javaparser.version>
   	<spring-core.version>5.0.2.RELEASE</spring-core.version>
-  	
+  	<hibernate.version>5.2.12.Final</hibernate.version>
   </properties>
 
   <dependencies>
@@ -44,7 +44,11 @@
 	    <artifactId>spring-core</artifactId>
 	    <version>${spring-core.version}</version>
 	</dependency>
-	
+	<dependency>
+		    <groupId>org.hibernate</groupId>
+		    <artifactId>hibernate-core</artifactId>
+		    <version>${hibernate.version}</version>
+		</dependency>
 	
   </dependencies>
 </project>
